<resources>
    <string name="app_name">CountryInfo</string>
    <string name="country_name_label">Country name</string>
    <string name="description_clear_name_filter">Clear</string>
    <string name="description_expandable_arrow">Expandable Arrow</string>
    <string name="continent">Continent</string>
    <string name="capital">Capital</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="phone">Phone</string>
    <string name="country_list_empty_message">No country matches these filters</string>
    <string name="generic_error_message">Something went wrong</string>
    <string name="retry_button_text">Retry</string>
</resources>