...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.input.ImeAction.Companion.Search
import androidx.compose.ui.text.input.KeyboardType
import com.cmunaro.countryinfo.R

const val TAG_TEXT_FIELD_COUNTRY_NAME_FILTER = "text field country name filter"

@Composable
fun NameInputFilter(filter: String, onChange: (String) -> Unit, onClear: () -> Unit) {
    val focusManager = LocalFocusManager.current
    TextField(
        modifier = Modifier
...
